# ai_moon_ros2

./: .gitignore  HANDOFF.md  README.md  TUNING.md
models/: README.md
models/yolo26n_traffic_320_ncnn_model/: metadata.yaml  model.ncnn.param  model_ncnn.py
models/yolo26n_traffic_ncnn_model/: metadata.yaml  model.ncnn.param  model_ncnn.py
perception.yolo26/: README.dataset.txt  README.roboflow.txt  data.yaml
src/camera/: package.xml  setup.py
src/camera/camera/: camera_node.py
src/car_planner/: package.xml  setup.cfg  setup.py
src/car_planner/car_planner/: battery_node.py  main_planner_node.py  web_viewer_node.py
src/car_planner/config/: outcourse_params.yaml  params.yaml
src/car_planner/launch/: auto_driving.launch.py  lane_drive.launch.py  motor_test.launch.py  outcourse.launch.py  race.launch.py
src/control/: package.xml  setup.py
src/control/control/: control_node.py  motor_test_node.py  pca9685.py  racer.py
src/control_msgs/: CMakeLists.txt  package.xml
src/control_msgs/msg/: Control.msg
src/cv_detect/: package.xml  setup.cfg  setup.py
src/cv_detect/cv_detect/: aruco_detect_node.py  parking_sign_node.py  red_zone_node.py  rubbercone_node.py
src/drive_msgs/: CMakeLists.txt  package.xml
src/drive_msgs/msg/: DriveCommand.msg
src/lane_detection/: package.xml  setup.py
src/lane_detection/lane_detection/: lane_detection_node.py  slidewindow.py
src/missions/: package.xml  setup.py
src/missions/missions/: dynamic_obs_mission_node.py  roundabout_mission_node.py  traffic_light_mission_node.py
src/outcourse_lane_detection/: package.xml  setup.cfg  setup.py
src/outcourse_lane_detection/outcourse_lane_detection/: __init__.py  lane_detection_node.py  slidewindow.py
src/outcourse_missions/: package.xml  setup.cfg  setup.py
src/outcourse_missions/outcourse_missions/: __init__.py  fork_mission_node.py
src/outcourse_yolo_detect/: package.xml  setup.cfg  setup.py
src/outcourse_yolo_detect/outcourse_yolo_detect/: __init__.py  yolo_detect_node.py
src/yolo_detect/: package.xml  setup.py
src/yolo_detect/launch/: yolo_detect.launch.py
src/yolo_detect/yolo_detect/: yolo_detect_node.py
tools/: PARAM_TUNER.md  bag_player.py  bag_replay_frames.py  bag_report.py  battery_monitor.py  cam_ctl.py  doctor.sh  gamepad_pair.py  gamepad_test.py  gamepads.py  hsv_search.py  hsv_tuner.py  motor_watchdog.py  param_search2.py  param_tuner.py  roi_tuner.py  stack_diag.py  train_yolo26.py  web_tuner.py
tools/verify_slidewindow/: slidewindow_ref.py  verify.py
