<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>car_planner</name>
  <version>1.0.0</version>
  <description>Mission arbiter / main planner (migrated from ROS1 car_planner)</description>
  <maintainer email="smoony0226ai@kookmin.ac.kr">seongjin</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>drive_msgs</exec_depend>
  <exec_depend>control_msgs</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
