<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>missions</name>
  <version>1.0.0</version>
  <description>SEA:ME hackathon mission nodes (traffic light, roundabout, dynamic obstacle)</description>
  <maintainer email="smoony0226ai@kookmin.ac.kr">seongjin</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>drive_msgs</exec_depend>
  <exec_depend>control_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
