<?xml version="1.0"?>
<package format="3">
  <name>outcourse_lane_detection</name>
  <version>1.0.0</version>
  <description>Outcourse-only sliding-window lane detection</description>
  <maintainer email="smoony0226ai@kookmin.ac.kr">seongjin</maintainer>
  <license>Apache-2.0</license>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>drive_msgs</exec_depend>
  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <export><build_type>ament_python</build_type></export>
</package>
